--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@next/font": "13.1.0",
+    "axios": "^1.2.4",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "js-cookie": "^3.0.1",
     "next": "13.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1"
   }
 }
