--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.0",
     "axios": "^1.2.4",
+    "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "js-cookie": "^3.0.1",
