--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
