--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API=http://localhost:9000/
+# NEXT_PUBLIC_API=https://semina-server-api.vercel.app/
+NEXT_PUBLIC_API=http://127.0.0.1:9000/
